--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.11",
     "iview": "^1.0.1",
+    "request": "^2.88.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
