--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
     "iview": "^1.0.1",
     "request": "^2.88.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-schart": "^1.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
